<resources>
    <string name="app_name">MyType</string>

    <string name="login_title">Login</string>
    <string name="login_email_hint">이메일을 입력해 주세요</string>
    <string name="login_pw_hint">비밀번호를 입력해 주세요</string>
    <string name="login_button">로그인하기</string>
    <string name="sign_up_button">회원가입하기</string>
    <string name="login_fail_message">로그인에 실패하였습니다. 이메일과 비밀번호를 다시 확인해 주세요.</string>

    <string name="sign_up_title">회원가입</string>
    <string name="login_name_hint">이름을 입력해 주세요</string>
    <string name="next_button">다음</string>
    <string name="complete_button">완료</string>
    <string name="profile_nickname">닉네임을 입력하세요</string>
    <string name="profile_sex">성별</string>
    <string name="profile_age">나이</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="type_title">나의 타입을 골라주세요</string>
    <string name="type_mbti">MBTI</string>
    <string name="menu_home">홈</string>
    <string name="menu_chatting">채팅</string>
    <string name="menu_my_page">마이페이지</string>
    <string name="toast_login_need">로그인이 필요합니다</string>
</resources>