<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/nickNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/profile_nickname"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/nickNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickNameTextView"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        />

    <TextView
        android:id="@+id/sexTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_sex"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/nickNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nickNameEditText"
        android:layout_marginTop="70dp"/>
    
    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sexTextView"
        app:layout_constraintStart_toStartOf="@id/nickNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/female"
            android:background="@drawable/selector_radio_button"
            android:textColor="@drawable/selector_radio_text"
            android:paddingHorizontal="50dp"
            android:paddingVertical="7dp"
            android:textSize="18sp"
            android:layout_marginEnd="15sp"
            />

        <RadioButton
            android:id="@+id/sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/male"
            android:background="@drawable/selector_radio_button"
            android:textColor="@drawable/selector_radio_text"
            android:paddingHorizontal="50dp"
            android:paddingVertical="7dp"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_age"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/nickNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSex"
        android:layout_marginTop="70dp"/>









</androidx.constraintlayout.widget.ConstraintLayout>